Cleaning up the code

--- a/studylink/templates/home.html
+++ b/studylink/templates/home.html
@@ -25,6 +25,7 @@
           color: #fff;
           font-size: 1.3rem;
           text-align: center;
+          padding: 1rem;
           ">Our intuitive platform makes it simple to find, share, and manage study resources, so you can focus on learning</p>
         <button style="
           width: 100%;
