--- a/studylink/static/styles.css
+++ b/studylink/static/styles.css
@@ -601,7 +601,7 @@ main {
   align-items: var(--ALIGN-ITEMS);
   justify-content: var(--JUST-CONTENT);
   flex-wrap: wrap;
-  gap: 3rem;
+  gap: 1;
 }
 
 .content {
@@ -1081,6 +1081,10 @@ main {
     padding: 1rem;
     border: none;
     border-radius: 5px;
+  }
+
+  .content-box {
+    width: 600px;
   }
 
   .edit {
