--- a/studylink/templates/home.html
+++ b/studylink/templates/home.html
@@ -72,7 +72,9 @@
       </section>
     {% else %}
       {% for course_name, resources in resources_dict.items() %}
-        <h2 style="font-size: 20px; margin-bottom: 2rem; font-size: 1rem;">{{ course_name }}</h2>
+        {% if len(resources_dict) > 1 %}
+          <h2 style="font-size: 20px; margin-bottom: 2rem; margin-top: 3rem; font-size: 1rem;">{{ course_name }}</h2>
+        {% endif %}
         <section class="content-box">
           {% for resource in resources %}
             <section class="content">
