--- a/studylink/templates/base.html
+++ b/studylink/templates/base.html
@@ -36,7 +36,7 @@
           <span class="name1">studyLink</span>
         </section>
         <i class="fa fa-bars" aria-hidden="true" style="font-size:40px;"></i>
-        <nav style="margin-top: 12rem; background-color: #240c54ef; height: 60px; border-radius: 7px;">
+        <nav class="change-nav">
           <ul>
             <li><a  href="{{ url_for('home') }}"><i class="fa fa-home" aria-hidden="true"></i></i>Home</a></li>
             <li><a href="{{ url_for('saved_resources') }}"><i class="fa fa-floppy-o" aria-hidden="true"></i>Saved Resources</a></li>
