Remove justify content from content-box

--- a/studylink/templates/home.html
+++ b/studylink/templates/home.html
@@ -72,7 +72,7 @@
       </section>
     {% else %}
       {% for course_name, resources in resources_dict.items() %}
-          <h2 style="font-size: 20px; margin-bottom: 2rem; margin-top: 3rem; margin-left: 4rem; font-size: 1rem;">{{ course_name }}</h2>
+          <h2 style="font-size: 20px; margin-bottom: 2rem; margin-top: 3rem; text-align: center; font-size: 1rem;">{{ course_name }}</h2>
         <section class="content-box">
           {% for resource in resources %}
             <section class="content">
