--- a/studylink/templates/home.html
+++ b/studylink/templates/home.html
@@ -50,7 +50,7 @@
         {% for resource in resources %}
           <section class="content">
             <section class="user">
-              <img src="{{ url_for('static', filename='images/' ~ resource.user.image_file) }}" alt="Profile" width="40px" height="40px" style="border-radius: 50%;">
+              <img src="{{ url_for('static', filename='images/' ~ resource.user.image_file) }}" alt="" width="40px" height="40px" style="border-radius: 50%; background-color: #333;">
               <section class="info">
                 <p>
                   <strong><a href="{{ url_for('home') }}" class="res-username">{{ resource.user.username }}</a></strong>
@@ -77,7 +77,7 @@
           {% for resource in resources %}
             <section class="content">
               <section class="user">
-                <img src="{{ url_for('static', filename='images/' ~ resource.user.image_file) }}" alt="Profile" style="width: 40px; height: 40px; border-radius: 50%;">
+                <img src="{{ url_for('static', filename='images/' ~ resource.user.image_file) }}" alt="" style="width: 40px; height: 40px; border-radius: 50%; background-color: #333;">
                 <section class="info">
                   <p>
                     <strong><a href="{{ url_for('view_profile', user_id=resource.user_id) }}" class="res-username">{{ resource.user.username }}</a></strong>
