--- a/studylink/static/styles.css
+++ b/studylink/static/styles.css
@@ -597,11 +597,9 @@ main {
 }
 
 .content-box {
-  display: var(--FLEX-DISPLAY);
-  align-items: var(--ALIGN-ITEMS);
-  flex-wrap: wrap;
+  width: 300px;
   gap: 2rem;
-  margin: 4rem auto;
+  margin: .2rem auto;
 }
 
 .content {
@@ -767,6 +765,10 @@ main {
     height: 400px;
     margin-top: -1rem;
   }
+
+  .content-box {
+    width: 350px;
+  }
 }
 
 @media screen and (min-width: 590px) {
@@ -819,6 +821,10 @@ main {
 
   .preview_head {
     font-size: 1.5rem;
+  }
+
+  .content-box {
+    width: 500px;
   }
 
   .content {
@@ -1014,7 +1020,7 @@ main {
   }
 
   .content {
-    width: 450px;
+    width: 700px;
     margin: 0 auto;
   }
   
@@ -1195,6 +1201,10 @@ main {
 
   .action-buttons i {
     font-size: 40px;
+  }
+
+  .content-box {
+    width: 900px;
   }
 
   .contact-icons {
