--- a/studylink/static/styles.css
+++ b/studylink/static/styles.css
@@ -1019,9 +1019,13 @@ main {
     font-size: 1.5rem;
   }
 
-  .content {
+  .content-box {
     width: 700px;
     margin: 0 auto;
+  }
+
+  .content {
+    width: 320px;
   }
   
   .user {
@@ -1094,11 +1098,6 @@ main {
     padding: 1rem;
     border: none;
     border-radius: 5px;
-  }
-
-  .content-box {
-    width: 700;
-    margin: 2rem
   }
 
   .edit {
@@ -1206,6 +1205,10 @@ main {
   .content-box {
     width: 900px;
   }
+
+  .content {
+    width: 380px;
+  };
 
   .contact-icons {
     width: 300px;
