--- a/studylink/templates/base.html
+++ b/studylink/templates/base.html
@@ -14,7 +14,9 @@
   <meta property="og:sitename" content="StudyLink">
   <meta property="og:locale" content="en-US">
 
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/logo.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,7 +38,7 @@
           <span class="name1">studyLink</span>
         </section>
         <i class="fa fa-bars" aria-hidden="true" style="font-size:40px;"></i>
-        <nav class="change-nav">
+        <nav class="change-nav" style="margin-left: -5px;">
           <ul>
             <li><a  href="{{ url_for('home') }}"><i class="fa fa-home" aria-hidden="true"></i></i>Home</a></li>
             <li><a href="{{ url_for('saved_resources') }}"><i class="fa fa-floppy-o" aria-hidden="true"></i>Saved Resources</a></li>
@@ -88,5 +90,7 @@
       Copyright &copy; <span class="year"></span>
     </footer>
   {% endif %}
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
