--- a/studylink/templates/login.html
+++ b/studylink/templates/login.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
   {% for message in get_flashed_messages() %}
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
     {{ message }}
+  </div>
   {% endfor %}
 
   <section class="form-border" id="login">
