Separating c/c++ course name

--- a/studylink/templates/account.html
+++ b/studylink/templates/account.html
@@ -25,12 +25,12 @@
         {% endif %}
         {% if current_user.twitter %}
           <p class="account-details"><span class="account-style">Twitter</span>:
-            <a href="{{ current_user.twitter }}" target="_blank" style="color: #30106f;">Check my tweets</a>
+            <a href="{{ current_user.twitter }}" target="_blank" style="color: #7f0e50;">Check my tweets</a>
           </p>
         {% endif %}
         {% if current_user.github %}
           <p class="account-details"><span class="account-style">Github</span>:
-            <a href="{{ current_user.github }}" target="_blank" style="color: #30106f;">Take a look at my projects</a>
+            <a href="{{ current_user.github }}" target="_blank" style="color: #7f0e50;">Take a look at my projects</a>
           </p>
         {% endif %}
         <p class="account-details">
