--- a/studylink/templates/home.html
+++ b/studylink/templates/home.html
@@ -45,6 +45,16 @@
     {% else %}
       <h2 class="preview_head">Added Resources</h2>
     {% endif %}
+    <form method="GET" action="{{ url_for('search_resources') }}" class="search-bar">
+      <div class="form-row">
+        <div class="col-md-10">
+          <input class="form-control" type="search" name="query" placeholder="Search resources..." aria-label="Search">
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i> Search</button>
+        </div>
+      </div>
+    </form>
     {% if not is_authenticated %}
       <section class="content-box">
         {% for resource in resources %}
