--- a/studylink/templates/home.html
+++ b/studylink/templates/home.html
@@ -21,30 +21,21 @@
         <p>Follow peers on social media and GitHub to stay updated and build your network</p>
       </section>
       <section class="additional-info" style="width: 100%; background-color: #240c54ef; padding: 1rem; margin-top: 2rem; border-radius: 5px;">
-        <p style="
-          color: #fff;
-          font-size: 1.3rem;
-          text-align: center;
-          padding: 1rem;
-          ">Our intuitive platform makes it simple to find, share, and manage study resources, so you can focus on learning</p>
-        <button style="
-          width: 100%;
-          border: 2px solid #fff;
-          background: transparent;
-          padding: .5rem;
-          border-radius: 7px;
-        ">
+        <p style="color: #fff; font-size: 1.3rem; text-align: center; padding: 1rem;">Our intuitive platform makes it simple to find, share, and manage study resources, so you can focus on learning</p>
+        <button style="width: 100%; border: 2px solid #fff; background: transparent; padding: .5rem; border-radius: 7px;">
           <a style="color: #fff; font-size: 1.23rem; text-decoration: none; font-weight: bolder;" href="{{ url_for('register') }}#signup">Get Started</a>
         </button>
       </section>
     </section>
   {% endif %}
+
   <section class="form-group" style="width: 100%;" id="resources">
     {% if not current_user.is_authenticated %}
       <h2 class="preview_head">Featured Resources</h2>
     {% else %}
       <h2 class="preview_head">Added Resources</h2>
     {% endif %}
+
     <form method="GET" action="{{ url_for('search_resources') }}" class="search-bar">
       <div class="form-row">
         <div class="col-md-10">
@@ -55,6 +46,7 @@
         </div>
       </div>
     </form>
+
     {% if not is_authenticated %}
       <section class="content-box">
         {% for resource in resources %}
@@ -113,8 +105,7 @@
     <section class="contact" style="margin-top: 2rem;">
       <h2 class="preview_head">Contact Us</h2>
       <section class="contact-icons">
-        <a href="mailto:mohaarash001@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>
-        </a>
+        <a href="mailto:mohaarash001@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         <a href="https://wa.me/254758861263" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
         <a href="http://x.com/MoBazmul" target="_blank"><img src="{{ url_for('static', filename='images/x-twitter.svg') }}" alt="twitter"></a>
       </section>
