--- a/studylink/templates/home.html
+++ b/studylink/templates/home.html
@@ -21,32 +21,30 @@
         <p>Follow peers on social media and GitHub to stay updated and build your network</p>
       </section>
       <section class="additional-info" style="width: 100%; background-color: #240c54ef; padding: 1rem; margin-top: 2rem; border-radius: 5px;">
-        <p style="color: #fff; font-size: 1.3rem; text-align: center; padding: 1rem;">Our intuitive platform makes it simple to find, share, and manage study resources, so you can focus on learning</p>
-        <button style="width: 100%; border: 2px solid #fff; background: transparent; padding: .5rem; border-radius: 7px;">
+        <p style="
+          color: #fff;
+          font-size: 1.3rem;
+          text-align: center;
+          padding: 1rem;
+          ">Our intuitive platform makes it simple to find, share, and manage study resources, so you can focus on learning</p>
+        <button style="
+          width: 100%;
+          border: 2px solid #fff;
+          background: transparent;
+          padding: .5rem;
+          border-radius: 7px;
+        ">
           <a style="color: #fff; font-size: 1.23rem; text-decoration: none; font-weight: bolder;" href="{{ url_for('register') }}#signup">Get Started</a>
         </button>
       </section>
     </section>
   {% endif %}
-
   <section class="form-group" style="width: 100%;" id="resources">
     {% if not current_user.is_authenticated %}
       <h2 class="preview_head">Featured Resources</h2>
     {% else %}
       <h2 class="preview_head">Added Resources</h2>
     {% endif %}
-
-    <form method="GET" action="{{ url_for('search_resources') }}" class="search-bar">
-      <div class="form-row">
-        <div class="col-md-10">
-          <input class="form-control" type="search" name="query" placeholder="Search resources..." aria-label="Search">
-        </div>
-        <div class="col-md-2">
-          <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i> Search</button>
-        </div>
-      </div>
-    </form>
-
     {% if not is_authenticated %}
       <section class="content-box">
         {% for resource in resources %}
@@ -74,28 +72,34 @@
       </section>
     {% else %}
       {% for course_name, resources in resources_dict.items() %}
+        <h2 style="font-size: 18px; margin-bottom: 2rem; margin-top: 3rem; text-align: center;">{{ course_name }}</h2>
         <section class="content-box">
-          {% for resource in resources %}
-            <section class="content">
-              <section class="user">
-                <img src="{{ url_for('static', filename='images/' ~ resource.user.image_file) }}" alt="" style="width: 40px; height: 40px; border-radius: 50%; background-color: #333;">
-                <section class="info">
-                  <p>
-                    <strong><a href="{{ url_for('view_profile', user_id=resource.user_id) }}" class="res-username">{{ resource.user.username }}</a></strong>
-                    <span style="font-size: 1.1rem; font-weight: bolder;">-</span> {{ moment(resource.date_posted).fromNow(refresh=True) }}
-                  </p>
-                  <p class="description">{{ resource.description }}</p>
+          {% if resources %}
+            {% for resource in resources %}
+              <section class="content">
+                <section class="user">
+                  <img src="{{ url_for('static', filename='images/' ~ resource.user.image_file) }}" alt="" style="width: 40px; height: 40px; border-radius: 50%; background-color: #333;">
+                  <section class="info">
+                    <p>
+                      <strong><a href="{{ url_for('view_profile', user_id=resource.user_id) }}" class="res-username">{{ resource.user.username }}</a></strong>
+                      <span style="font-size: 1.1rem; font-weight: bolder;">-</span> {{ moment(resource.date_posted).fromNow(refresh=True) }}
+                    </p>
+                    <p class="description">{{ resource.description }}</p>
+                  </section>
+                </section>
+                <img src="{{ resource.thumbnail }}" alt="Resource Img" class="image-extend">
+                <p class="title">{{ resource.title }}</p>
+                <p style="margin-left: .5rem;">Save to Watch</p>
+                <section class="action-buttons">
+                  <i class="fa fa-floppy-o save-resource" aria-hidden="true" style="font-size: 30px;" data-key="{{ resource.user_id }}" data-another-key="{{ resource.id }}"></i>
+                  <a href="{{ url_for('resource_comments', resource_id=resource.id) }}"><i class="fa fa-comments-o" aria-hidden="true" style="font-size: 30px;"></i></a>
                 </section>
               </section>
-              <img src="{{ resource.thumbnail }}" alt="Resource Img" class="image-extend">
-              <p class="title">{{ resource.title }}</p>
-              <p style="margin-left: .5rem;">Save to Watch</p>
-              <section class="action-buttons">
-                <i class="fa fa-floppy-o save-resource" aria-hidden="true" style="font-size: 30px;" data-key="{{ resource.user_id }}" data-another-key="{{ resource.id }}"></i>
-                <a href="{{ url_for('resource_comments', resource_id=resource.id) }}"><i class="fa fa-comments-o" aria-hidden="true" style="font-size: 30px;"></i></a>
-              </section>
-            </section>
-          {% endfor %}
+            {% endfor %}
+          {% else %}
+           <p style="margin: 1rem auto; font-size: 1rem; color:
+           rgb(162, 13, 13);">There are no added resources for this course</p>
+          {% endif %}
         </section>
       {% endfor %}
     {% endif %}
@@ -105,7 +109,8 @@
     <section class="contact" style="margin-top: 2rem;">
       <h2 class="preview_head">Contact Us</h2>
       <section class="contact-icons">
-        <a href="mailto:mohaarash001@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+        <a href="mailto:mohaarash001@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+        </a>
         <a href="https://wa.me/254758861263" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
         <a href="http://x.com/MoBazmul" target="_blank"><img src="{{ url_for('static', filename='images/x-twitter.svg') }}" alt="twitter"></a>
       </section>
