--- a/studylink/templates/base.html
+++ b/studylink/templates/base.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="StudyLink Official Web App">
   <meta property="og:type" content="Web App">
   <meta property="og:url" content="StudyLink Official Web App">
-  <meta property="og:image" content="{{ url_for('static', filename='images/logo.png') }}">
+  <meta property="og:image" content="{{ url_for('static', filename='images/about.jpg') }}">
   <meta property="og:sitename" content="StudyLink">
   <meta property="og:locale" content="en-US">
 
